Image Editor: Alpha (like Bloom) not showing properly again #81026

Closed
opened 2020-09-21 12:01:54 +02:00 by Pablo Vazquez · 7 comments
Member

System Information
Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro RTX 4000 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-21 08:49, hash: d72b5785eb
Worked: 2.91.0 Alpha around September 15th

Short description of error
The improvement done recently as part of the Image Editor refactor, that shows correct alpha values is no longer working.

{F8905803, size=full}

I made a video about it on September 15th, compiled that same day and it worked fine. But as of recently it no longer works.

Exact steps for others to reproduce the error
The easiest way to test is with EEVEE bloom, attached this simple file I used in the demo video:

bug_image_editor_bloom.blend

**System Information** Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro RTX 4000 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-21 08:49, hash: `d72b5785eb` Worked: 2.91.0 Alpha around September 15th **Short description of error** The improvement done recently as part of the Image Editor refactor, that shows correct alpha values is no longer working. {[F8905803](https://archive.blender.org/developer/F8905803/image.png), size=full} I made [a video about it on September 15th](https://youtu.be/mQqV77PaOVs?t=88), compiled that same day and it worked fine. But as of recently it no longer works. **Exact steps for others to reproduce the error** The easiest way to test is with EEVEE bloom, attached this simple file I used in the demo video: [bug_image_editor_bloom.blend](https://archive.blender.org/developer/F8905784/bug_image_editor_bloom.blend)
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Jeroen Bakker was assigned by Pablo Vazquez 2020-09-21 12:02:21 +02:00
Member

Issue introduced by 78ea6302f1

The render result is tagged in the shader as being not premultiplied. That seems to be incorrect. As the data is premultiplied. Need to check the actual state in on the render result, and how this is transferred to the shader.

Screenshot from 2020-09-21 14-10-23.png

Issue introduced by 78ea6302f1 The render result is tagged in the shader as being not premultiplied. That seems to be incorrect. As the data is premultiplied. Need to check the actual state in on the render result, and how this is transferred to the shader. ![Screenshot from 2020-09-21 14-10-23.png](https://archive.blender.org/developer/F8906092/Screenshot_from_2020-09-21_14-10-23.png)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Ok what I have found out so far.

alpha_bug.blend

The float buffer of this file when rendering is straight alpha. For the bloom effect to be visible it should be rendered to premultiplied. Changing the alpha association will render the alpha_bug.blend incorrectly. This points to a more indepth issue that we need to tackle.

The reason why this wasn't visible before was that the pure emissive colors were also rendered for straight alphas what isn't correct. I need to get the whole picture clear to find out which transformation is done when.

  • If you render, save to openEXR and load the openEXR back, the bloom is drawn correctly.
Ok what I have found out so far. [alpha_bug.blend](https://archive.blender.org/developer/F8906255/alpha_bug.blend) The float buffer of this file when rendering is straight alpha. For the bloom effect to be visible it should be rendered to premultiplied. Changing the alpha association will render the alpha_bug.blend incorrectly. This points to a more indepth issue that we need to tackle. The reason why this wasn't visible before was that the pure emissive colors were also rendered for straight alphas what isn't correct. I need to get the whole picture clear to find out which transformation is done when. * If you render, save to openEXR and load the openEXR back, the bloom is drawn correctly.
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

This issue was referenced by b17cca6966

This issue was referenced by b17cca6966dd06be5fc66a5c1ece79bbfe6b39b7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81026
No description provided.